--- a/app/src/main/res/layout/article_publish_tooltip_layout.xml
+++ b/app/src/main/res/layout/article_publish_tooltip_layout.xml
@@ -13,7 +13,7 @@
     android:id="@+id/secondTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Once done publish your story"
+    android:text="@string/coachmark_article_3"
     android:textColor="@color/campaign_515151"
     android:textSize="14sp"
     app:fontName="Roboto-Regular.ttf"
@@ -26,7 +26,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
-    android:text="Ok, Got it"
+    android:text="@string/ok_got_it"
     android:textColor="@color/app_red"
     android:textSize="16sp"
     app:fontName="Roboto-Medium.ttf"
