--- a/app/src/main/res/layout/article_details_fragment.xml
+++ b/app/src/main/res/layout/article_details_fragment.xml
@@ -6,7 +6,6 @@
   android:fitsSystemWindows="true"
   android:orientation="vertical">
 
-
   <com.mycity4kids.observablescrollview.ObservableScrollView
     android:id="@+id/scroll_view"
     android:layout_width="match_parent"
@@ -25,7 +24,6 @@
         android:layout_height="60dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
-
 
       <RelativeLayout
         android:id="@+id/headerImageOrYoutubeViewContainer"
@@ -64,7 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/headerImageOrYoutubeViewContainer"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         android:gravity="center"
         android:paddingTop="10dp"
         android:visibility="gone">
@@ -74,7 +72,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
-          android:layout_marginLeft="10dp"
+          android:layout_marginStart="10dp"
           android:textColor="@color/ad.author_name.text"
           android:textSize="12sp"
           app:fontName="open_sans.ttf" />
@@ -83,8 +81,7 @@
           android:id="@+id/sponseredImage"
           android:layout_width="80dp"
           android:layout_height="80dp"
-          android:layout_alignParentRight="true" />
-
+          android:layout_alignParentEnd="true" />
 
       </RelativeLayout>
       <com.mycity4kids.widget.CustomFontTextView
@@ -138,9 +135,9 @@
           android:id="@+id/articleViewCountTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginRight="10dp"
+          android:layout_marginEnd="10dp"
           android:layout_marginBottom="10dp"
-          android:drawableLeft="@drawable/ic_views"
+          android:drawableStart="@drawable/ic_views"
           android:drawablePadding="3dp"
           android:text=""
           android:textColor="@color/ad.stats.text"
@@ -152,9 +149,9 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/article_title"
-          android:layout_marginRight="10dp"
+          android:layout_marginEnd="10dp"
           android:layout_marginBottom="10dp"
-          android:drawableLeft="@drawable/ic_comments"
+          android:drawableStart="@drawable/ic_comments"
           android:drawablePadding="3dp"
           android:text=""
           android:textColor="@color/ad.stats.text"
@@ -167,7 +164,7 @@
           android:layout_height="wrap_content"
           android:layout_below="@+id/article_title"
           android:layout_marginBottom="10dp"
-          android:drawableLeft="@drawable/ic_likes"
+          android:drawableStart="@drawable/ic_likes"
           android:drawablePadding="3dp"
           android:text=""
           android:textColor="@color/ad.stats.text"
@@ -230,7 +227,7 @@
         android:layout_below="@+id/bottomAdSlotWebView"
         android:gravity="center_vertical"
         android:padding="@dimen/space_16"
-        android:text="dkjbdk ksbdvk"
+        android:text=""
         android:textColor="#979797"
         android:textSize="12sp" />
 
@@ -272,7 +269,6 @@
           android:visibility="gone"
           app:fontName="open_sans.ttf" />
 
-
         <RelativeLayout
           android:id="@+id/rl"
           android:layout_width="match_parent"
@@ -308,10 +304,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tagsContainer"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:paddingLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:paddingStart="10dp"
             android:paddingTop="6dp"
-            android:paddingRight="15dp"
+            android:paddingEnd="15dp"
             android:paddingBottom="6dp"
             android:text="@string/ad.view_all_tags.text"
             android:textColor="@color/app_red"
