--- a/app/src/main/res/layout/blogger_gold_about_fragment.xml
+++ b/app/src/main/res/layout/blogger_gold_about_fragment.xml
@@ -44,17 +44,18 @@
       android:layout_marginRight="@dimen/space_20"
       android:text="@string/blogger_gold_about_text2"
       android:textColor="@color/campaign_515151"
-      android:textSize="16sp" />
+      android:textSize="16sp"
+      android:textStyle="bold" />
 
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="vertical"
-      android:background="@drawable/leaderboard_about_bg"
-      android:padding="@dimen/space_5"
       android:layout_marginLeft="@dimen/space_20"
       android:layout_marginTop="@dimen/space_10"
-      android:layout_marginRight="@dimen/space_20">
+      android:layout_marginRight="@dimen/space_20"
+      android:background="@drawable/leaderboard_about_bg"
+      android:orientation="vertical"
+      android:padding="@dimen/space_5">
 
       <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/blogger_gold_about_text3"
