--- a/app/src/main/res/layout/user_profile_activity.xml
+++ b/app/src/main/res/layout/user_profile_activity.xml
@@ -65,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/article_listing_item_border_bg"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <ImageView
               android:id="@+id/profileImageView"
@@ -331,7 +331,7 @@
                 android:background="@drawable/update_profile_bg"
                 android:elevation="6dp"
                 android:gravity="center"
-                android:minWidth="120dp"
+                android:minWidth="110dp"
                 android:paddingStart="30dp"
                 android:paddingTop="14dp"
                 android:paddingEnd="30dp"
@@ -354,7 +354,7 @@
                 android:drawableStart="@drawable/ic_analytics"
                 android:elevation="6dp"
                 android:gravity="center"
-                android:minWidth="120dp"
+                android:minWidth="110dp"
                 android:paddingStart="10dp"
                 android:paddingTop="12dp"
                 android:paddingEnd="10dp"
@@ -411,9 +411,9 @@
                 android:id="@+id/bloggerGoldTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="12dp"
                 android:background="@drawable/circular_gradient_bg"
-                android:elevation="20dp"
+                android:elevation="6dp"
                 android:padding="12dp"
                 android:src="@drawable/ic_gift"
                 android:tint="@color/white_color"
